Fixes image in guide field popup overflowing out of the container.

--- a/tool-ui/src/main/webapp/style/v3/guide.less
+++ b/tool-ui/src/main/webapp/style/v3/guide.less
@@ -187,6 +187,12 @@
   width: 1010px;
 }
 
+.popup[name='guideField'] {
+  img {
+    max-width: 100%;
+  }
+}
+
 .popup[name='guidePrint'] {
   max-width: none;
   top: 0;
